tests/baselines/reference/optionalSetterParam.errors.txt
==== tests/cases/compiler/optionalSetterParam.ts (1 errors) ====
    class foo {
    
        public set bar(param?:any) { }
                      ~~~~~~~~~~
!!! optionalSetterParam.ts(3,19): error TS1051: 'set' accessor parameter cannot be optional.
    }
    